blinker - Everything is Resharper green and null complianced.

--- a/LinkerPlayer/UserControls/FunctionButtons.xaml
+++ b/LinkerPlayer/UserControls/FunctionButtons.xaml
@@ -1,26 +1,40 @@
-﻿<UserControl x:Class="LinkerPlayer.View.UserControls.FunctionButtons"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="60">
+﻿<UserControl
+    x:Class="LinkerPlayer.UserControls.FunctionButtons"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="450"
+    d:DesignWidth="60"
+    mc:Ignorable="d">
     <UserControl.Resources>
         <Style TargetType="{x:Type ListView}">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderThickness" Value="0" />
         </Style>
     </UserControl.Resources>
 
     <Grid>
-        <ListView Name="List" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
-                  ScrollViewer.CanContentScroll="False">
+        <ListView
+            Name="List"
+            ScrollViewer.CanContentScroll="False"
+            ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+            ScrollViewer.VerticalScrollBarVisibility="Hidden">
             <ListViewItem Padding="5">
-                <Button x:Name="SettingsButton" Width="50" Height="50" Background="#212128" BorderBrush="Transparent" Padding="15"
-                        Click="SettingsButton_Click">
-                    <Image Source="/Images/settings.png" RenderOptions.BitmapScalingMode ="HighQuality" RenderTransformOrigin="0.5,0.5">
+                <Button
+                    x:Name="SettingsButton"
+                    Width="50"
+                    Height="50"
+                    Padding="15"
+                    Background="#212128"
+                    BorderBrush="Transparent"
+                    Click="SettingsButton_Click">
+                    <Image
+                        RenderOptions.BitmapScalingMode="HighQuality"
+                        RenderTransformOrigin="0.5,0.5"
+                        Source="/Images/settings.png">
                         <Image.RenderTransform>
-                            <RotateTransform Angle="0" x:Name="CogRotateAnim"/>
+                            <RotateTransform x:Name="CogRotateAnim" Angle="0" />
                         </Image.RenderTransform>
                     </Image>
                     <Button.Triggers>
@@ -28,11 +42,14 @@
                             <EventTrigger.Actions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <DoubleAnimation From ="0" To="135" Duration="0:0:0.5"
-                                                         Storyboard.TargetName="CogRotateAnim"
-                                                         Storyboard.TargetProperty="(RotateTransform.Angle)">
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="CogRotateAnim"
+                                            Storyboard.TargetProperty="(RotateTransform.Angle)"
+                                            From="0"
+                                            To="135"
+                                            Duration="0:0:0.5">
                                             <DoubleAnimation.EasingFunction>
-                                                <CubicEase EasingMode="EaseOut"/>
+                                                <CubicEase EasingMode="EaseOut" />
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
                                     </Storyboard>
@@ -85,14 +102,29 @@
             <!--</ListViewItem>-->
 
             <ListViewItem Padding="5">
-                <Button x:Name="ConvertButton" Width="50" Height="50" Background="#212128" BorderBrush="Transparent" Padding="10"
-                        Click="ConvertButton_Click">
+                <Button
+                    x:Name="ConvertButton"
+                    Width="50"
+                    Height="50"
+                    Padding="10"
+                    Background="#212128"
+                    BorderBrush="Transparent"
+                    Click="ConvertButton_Click">
                     <Grid>
-                        <ProgressBar Name="ConvertingProgress" Style="{StaticResource MaterialDesignCircularProgressBar}"
-                                     Width="40" Height="40" Margin="-15" Visibility="Collapsed" IsIndeterminate="True"/>
-                        <Image Source="/Images/convert.png" RenderOptions.BitmapScalingMode ="HighQuality" RenderTransformOrigin="0.5,0.5">
+                        <ProgressBar
+                            Name="ConvertingProgress"
+                            Width="40"
+                            Height="40"
+                            Margin="-15"
+                            IsIndeterminate="True"
+                            Style="{StaticResource MaterialDesignCircularProgressBar}"
+                            Visibility="Collapsed" />
+                        <Image
+                            RenderOptions.BitmapScalingMode="HighQuality"
+                            RenderTransformOrigin="0.5,0.5"
+                            Source="/Images/convert.png">
                             <Image.RenderTransform>
-                                <RotateTransform Angle="0" x:Name="ConvertRotateAnim"/>
+                                <RotateTransform x:Name="ConvertRotateAnim" Angle="0" />
                             </Image.RenderTransform>
                         </Image>
                     </Grid>
@@ -102,11 +134,14 @@
                             <EventTrigger.Actions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <DoubleAnimation From ="0" To="360" Duration="0:0:0.5"
-                                                         Storyboard.TargetName="ConvertRotateAnim"
-                                                         Storyboard.TargetProperty="(RotateTransform.Angle)">
+                                        <DoubleAnimation
+                                            Storyboard.TargetName="ConvertRotateAnim"
+                                            Storyboard.TargetProperty="(RotateTransform.Angle)"
+                                            From="0"
+                                            To="360"
+                                            Duration="0:0:0.5">
                                             <DoubleAnimation.EasingFunction>
-                                                <CubicEase EasingMode="EaseOut"/>
+                                                <CubicEase EasingMode="EaseOut" />
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
                                     </Storyboard>
@@ -118,17 +153,65 @@
             </ListViewItem>
 
             <ListViewItem Padding="5">
-                <Button x:Name="EqualizerButton" Width="50" Height="50" Background="#212128" BorderBrush="Transparent" Padding="8"
-                        Click="EqualizerButton_Click">
+                <Button
+                    x:Name="EqualizerButton"
+                    Width="50"
+                    Height="50"
+                    Padding="8"
+                    Background="#212128"
+                    BorderBrush="Transparent"
+                    Click="EqualizerButton_Click">
 
                     <Canvas>
-                        <Border Background="White" CornerRadius="1" Width="3" Height="28" Canvas.Left="-13.5" Canvas.Top="-14"/>
-                        <Border Background="White" CornerRadius="1" Width="3" Height="28" Canvas.Left="10.5" Canvas.Top="-14"/>
-                        <Border Background="White" CornerRadius="1" Width="3" Height="28" Canvas.Left="-1.5" Canvas.Top="-14"/>
+                        <Border
+                            Canvas.Left="-13.5"
+                            Canvas.Top="-14"
+                            Width="3"
+                            Height="28"
+                            Background="White"
+                            CornerRadius="1" />
+                        <Border
+                            Canvas.Left="10.5"
+                            Canvas.Top="-14"
+                            Width="3"
+                            Height="28"
+                            Background="White"
+                            CornerRadius="1" />
+                        <Border
+                            Canvas.Left="-1.5"
+                            Canvas.Top="-14"
+                            Width="3"
+                            Height="28"
+                            Background="White"
+                            CornerRadius="1" />
 
-                        <Ellipse Name="EqCircle1" Fill="#212128" Stroke="White" StrokeThickness="2" Width="9" Height="9" Canvas.Left="-16.5" Canvas.Top="-10"/>
-                        <Ellipse Name="EqCircle2" Fill="#212128" Stroke="White" StrokeThickness="2" Width="9" Height="9" Canvas.Left="-4.5" Canvas.Top="3"/>
-                        <Ellipse Name="EqCircle3" Fill="#212128" Stroke="White" StrokeThickness="2" Width="9" Height="9" Canvas.Left="7.5" Canvas.Top="-6"/>
+                        <Ellipse
+                            Name="EqCircle1"
+                            Canvas.Left="-16.5"
+                            Canvas.Top="-10"
+                            Width="9"
+                            Height="9"
+                            Fill="#212128"
+                            Stroke="White"
+                            StrokeThickness="2" />
+                        <Ellipse
+                            Name="EqCircle2"
+                            Canvas.Left="-4.5"
+                            Canvas.Top="3"
+                            Width="9"
+                            Height="9"
+                            Fill="#212128"
+                            Stroke="White"
+                            StrokeThickness="2" />
+                        <Ellipse
+                            Name="EqCircle3"
+                            Canvas.Left="7.5"
+                            Canvas.Top="-6"
+                            Width="9"
+                            Height="9"
+                            Fill="#212128"
+                            Stroke="White"
+                            StrokeThickness="2" />
                     </Canvas>
 
                     <Button.Triggers>
@@ -136,30 +219,39 @@
                             <EventTrigger.Actions>
                                 <BeginStoryboard>
                                     <Storyboard>
-                                        <DoubleAnimation From="-10" To="3" Duration="0:0:0.4"
-                                                         Storyboard.TargetName="EqCircle1"
-                                                         Storyboard.TargetProperty="(Canvas.Top)"
-                                                         AutoReverse="True">
+                                        <DoubleAnimation
+                                            AutoReverse="True"
+                                            Storyboard.TargetName="EqCircle1"
+                                            Storyboard.TargetProperty="(Canvas.Top)"
+                                            From="-10"
+                                            To="3"
+                                            Duration="0:0:0.4">
                                             <DoubleAnimation.EasingFunction>
-                                                <CubicEase EasingMode="EaseOut"/>
+                                                <CubicEase EasingMode="EaseOut" />
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
 
-                                        <DoubleAnimation From="3" To="-10" Duration="0:0:0.4"
-                                                         Storyboard.TargetName="EqCircle2"
-                                                         Storyboard.TargetProperty="(Canvas.Top)"
-                                                         AutoReverse="True">
+                                        <DoubleAnimation
+                                            AutoReverse="True"
+                                            Storyboard.TargetName="EqCircle2"
+                                            Storyboard.TargetProperty="(Canvas.Top)"
+                                            From="3"
+                                            To="-10"
+                                            Duration="0:0:0.4">
                                             <DoubleAnimation.EasingFunction>
-                                                <CubicEase EasingMode="EaseOut"/>
+                                                <CubicEase EasingMode="EaseOut" />
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
 
-                                        <DoubleAnimation From="-6" To="3" Duration="0:0:0.25"
-                                                         Storyboard.TargetName="EqCircle3"
-                                                         Storyboard.TargetProperty="(Canvas.Top)"
-                                                         AutoReverse="True">
+                                        <DoubleAnimation
+                                            AutoReverse="True"
+                                            Storyboard.TargetName="EqCircle3"
+                                            Storyboard.TargetProperty="(Canvas.Top)"
+                                            From="-6"
+                                            To="3"
+                                            Duration="0:0:0.25">
                                             <DoubleAnimation.EasingFunction>
-                                                <CubicEase EasingMode="EaseOut"/>
+                                                <CubicEase EasingMode="EaseOut" />
                                             </DoubleAnimation.EasingFunction>
                                         </DoubleAnimation>
                                     </Storyboard>
