--- a/LinkerPlayer/Windows/EqualizerWindow.xaml
+++ b/LinkerPlayer/Windows/EqualizerWindow.xaml
@@ -1,10 +1,10 @@
-﻿<Window x:Class="LinkerPlayer.View.Windows.CustomEqualizer"
+﻿<Window x:Class="LinkerPlayer.Windows.CustomEqualizer"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:userControls="clr-namespace:LinkerPlayer.View.UserControls"
+        xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
         mc:Ignorable="d"
         
         WindowStyle="None"
