--- a/LinkerPlayer/UserControls/PlaylistText.xaml
+++ b/LinkerPlayer/UserControls/PlaylistText.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="LinkerPlayer.View.UserControls.PlaylistText"
+﻿<UserControl x:Class="LinkerPlayer.UserControls.PlaylistText"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
