--- a/LinkerPlayer/UserControls/SongList.xaml
+++ b/LinkerPlayer/UserControls/SongList.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="LinkerPlayer.View.UserControls.SongList"
+﻿<UserControl x:Class="LinkerPlayer.UserControls.SongList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:userControls="clr-namespace:LinkerPlayer.View.UserControls"
+             xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
              mc:Ignorable="d" 
              d:DesignHeight="507" d:DesignWidth="800">
     
