--- a/LinkerPlayer/UserControls/TrayIcon.xaml
+++ b/LinkerPlayer/UserControls/TrayIcon.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="LinkerPlayer.View.UserControls.TrayIcon"
+    x:Class="LinkerPlayer.UserControls.TrayIcon"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
