--- a/LinkerPlayer/Windows/MainWindow.xaml
+++ b/LinkerPlayer/Windows/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="LinkerPlayer.View.Windows.MainWindow"
+﻿<Window x:Class="LinkerPlayer.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,7 +6,7 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:converters="clr-namespace:MaterialDesignThemes.Wpf.Converters;assembly=MaterialDesignThemes.Wpf"
         xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf"
-        xmlns:userControls="clr-namespace:LinkerPlayer.View.UserControls"
+        xmlns:userControls1="clr-namespace:LinkerPlayer.UserControls"
 
         mc:Ignorable="d"
         WindowStyle="None"
@@ -50,27 +50,27 @@
         </Grid.ColumnDefinitions>
 
         <!--Row 0-->
-        <userControls:TitlebarButtons x:Name="TitlebarButtons" Grid.Row="0" Grid.ColumnSpan="3" Panel.ZIndex="1"/>
+        <userControls1:TitlebarButtons x:Name="TitlebarButtons" Grid.Row="0" Grid.ColumnSpan="3" Panel.ZIndex="1"/>
         
         <Border Grid.Row="0" Grid.Column="0" Background="Black" BorderBrush="White" BorderThickness="0 0 0 2" Opacity="0.4"/>
-        <userControls:NewPlaylistButton Grid.Row="0" Grid.Column="0"/>
+        <userControls1:NewPlaylistButton Grid.Row="0" Grid.Column="0"/>
 
-        <userControls:PlaylistText x:Name="PlaylistText" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
+        <userControls1:PlaylistText x:Name="PlaylistText" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="2"/>
 
         <!--Row 1-->
         <Border Grid.Row="1" Grid.Column="0" Background="Black" Opacity="0.4"/>
-        <userControls:PlaylistList x:Name="PlaylistList" Grid.Row="1" Grid.Column="0"/>
+        <userControls1:PlaylistList x:Name="PlaylistList" Grid.Row="1" Grid.Column="0"/>
 
-        <userControls:SongList x:Name="SongList" Grid.Row="1" Grid.Column="1"/>
+        <userControls1:SongList x:Name="SongList" Grid.Row="1" Grid.Column="1"/>
 
         <materialDesign:Snackbar Grid.Row="1" Grid.ColumnSpan="3" Name="InfoSnackbar" MessageQueue="{materialDesign:MessageQueue}" IsActive="False"/>
 
         <Border Grid.Row="1" Grid.Column="2" Background="Black" Opacity="0.4"/>
-        <userControls:FunctionButtons x:Name="FunctionButtons" Grid.Row="1" Grid.Column="2"/>
+        <userControls1:FunctionButtons x:Name="FunctionButtons" Grid.Row="1" Grid.Column="2"/>
 
         <!--Row 2-->
-        <userControls:BottomControlPanel x:Name="BottomControlPanel" Grid.Row="2" Grid.ColumnSpan="3"/>
+        <userControls1:BottomControlPanel x:Name="BottomControlPanel" Grid.Row="2" Grid.ColumnSpan="3"/>
 
-        <userControls:TrayIcon/>
+        <userControls1:TrayIcon/>
     </Grid>
 </Window>
