--- a/LinkerPlayer/UserControls/SongList.xaml
+++ b/LinkerPlayer/UserControls/SongList.xaml
@@ -1,52 +1,62 @@
-﻿<UserControl x:Class="LinkerPlayer.UserControls.SongList"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
-             mc:Ignorable="d" 
-             d:DesignHeight="507" d:DesignWidth="800">
-    
+﻿<UserControl
+    x:Class="LinkerPlayer.UserControls.SongList"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:converters="clr-namespace:LinkerPlayer.Converters"
+    d:DesignHeight="507"
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+
     <UserControl.Resources>
         <Style TargetType="{x:Type ListView}">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Margin" Value="10"/>
-            <Setter Property="AllowDrop" Value="True"/>
-            <EventSetter Event="Drop" Handler="ListView_Drop"/>
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Margin" Value="10" />
+            <Setter Property="AllowDrop" Value="True" />
+            <EventSetter Event="Drop" Handler="ListView_Drop" />
         </Style>
 
         <Style TargetType="{x:Type ListViewItem}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="ListViewItem">
-                        <Button Name="RowElement"
-                                Padding="0"
-                                HorizontalContentAlignment="Left"
-                                Background="Transparent"
-                                BorderBrush="Transparent"
-                                FontFamily="/Fonts/#Montserrat"
-                                FontSize="18"
-                                Foreground="#BDBDBD"
-                                FontWeight="Normal"
-                                Click="ClickRowElement"
-                                materialDesign:RippleAssist.IsDisabled="True">
-                            <GridViewRowPresenter/>
+                        <Button
+                            Name="RowElement"
+                            Padding="0"
+                            HorizontalContentAlignment="Left"
+                            materialDesign:RippleAssist.IsDisabled="True"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            Click="ClickRowElement"
+                            FontFamily="/Fonts/#Montserrat"
+                            FontSize="18"
+                            FontWeight="Normal"
+                            Foreground="#BDBDBD">
+                            <GridViewRowPresenter />
 
                             <Button.ContextMenu>
-                                <ContextMenu Background="#212121" Foreground="#BDBDBD" FontFamily="/Fonts/#Montserrat" FontWeight="DemiBold">
-                                    <MenuItem Header="Rename" Click="MenuItem_Click"/>
-                                    <MenuItem Header="Remove from playlist" Click="MenuItem_Click" Foreground="IndianRed"/>
+                                <ContextMenu
+                                    Background="#212121"
+                                    FontFamily="/Fonts/#Montserrat"
+                                    FontWeight="DemiBold"
+                                    Foreground="#BDBDBD">
+                                    <MenuItem Click="MenuItem_Click" Header="Rename" />
+                                    <MenuItem
+                                        Click="MenuItem_Click"
+                                        Foreground="IndianRed"
+                                        Header="Remove from playlist" />
                                 </ContextMenu>
                             </Button.ContextMenu>
                         </Button>
 
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" TargetName="RowElement">
+                                <Setter TargetName="RowElement" Property="Background">
                                     <Setter.Value>
-                                        <SolidColorBrush Opacity="0.1" Color="White"/>
+                                        <SolidColorBrush Opacity="0.1" Color="White" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -54,31 +64,32 @@
                     </ControlTemplate>
                 </Setter.Value>
             </Setter>
-            <Setter Property="AllowDrop" Value="True"/>
-            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_PreviewMouseLeftButtonDown"/>
-            <EventSetter Event="PreviewMouseMove" Handler="ListViewItem_PreviewMouseMove"/>
-            <EventSetter Event="Drop" Handler="ListViewItem_Drop"/>
-            <EventSetter Event="PreviewDragEnter" Handler="ListViewItem_PreviewDragEnter"/>
-            <EventSetter Event="PreviewDragLeave" Handler="ListViewItem_PreviewDragLeave"/>
+            <Setter Property="AllowDrop" Value="True" />
+            <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_PreviewMouseLeftButtonDown" />
+            <EventSetter Event="PreviewMouseMove" Handler="ListViewItem_PreviewMouseMove" />
+            <EventSetter Event="Drop" Handler="ListViewItem_Drop" />
+            <EventSetter Event="PreviewDragEnter" Handler="ListViewItem_PreviewDragEnter" />
+            <EventSetter Event="PreviewDragLeave" Handler="ListViewItem_PreviewDragLeave" />
         </Style>
 
         <Style TargetType="{x:Type GridViewColumnHeader}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type GridViewColumnHeader}">
-                        <TextBlock Name="ColumnName"
-                                   Text="{TemplateBinding Content}"
-                                   TextAlignment="Left"
-                                   Foreground="#BDBDBD"
-                                   FontSize="20"
-                                   FontFamily="/Fonts/#Montserrat"
-                                   Padding="4,5,4,5"/>
+                        <TextBlock
+                            Name="ColumnName"
+                            Padding="4,5,4,5"
+                            FontFamily="/Fonts/#Montserrat"
+                            FontSize="20"
+                            Foreground="#BDBDBD"
+                            Text="{TemplateBinding Content}"
+                            TextAlignment="Left" />
 
                         <ControlTemplate.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" TargetName="ColumnName">
+                                <Setter TargetName="ColumnName" Property="Background">
                                     <Setter.Value>
-                                        <SolidColorBrush Opacity="0.1" Color="White"/>
+                                        <SolidColorBrush Opacity="0.1" Color="White" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
@@ -89,25 +100,29 @@
         </Style>
 
         <Style x:Key="GridViewCellTextBox" TargetType="{x:Type TextBox}">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Foreground" Value="#BDBDBD"/>
-            <Setter Property="CaretBrush" Value="#BDBDBD"/>
-            <EventSetter Event="PreviewDragOver" Handler="TextBox_PreviewDragOver"/>
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="BorderThickness" Value="0" />
+            <Setter Property="Foreground" Value="#BDBDBD" />
+            <Setter Property="CaretBrush" Value="#BDBDBD" />
+            <EventSetter Event="PreviewDragOver" Handler="TextBox_PreviewDragOver" />
 
-            <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=Text}"/>
+            <Setter Property="ToolTip" Value="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
         </Style>
 
-        <userControls:DurationConverter x:Key="durationConverter" />
+        <converters:DurationConverter x:Key="DurationConverter" />
     </UserControl.Resources>
     <Grid>
-        <ListView Name="List" SizeChanged="ListView_SizeChanged" ScrollViewer.VerticalScrollBarVisibility="Hidden" ScrollViewer.CanContentScroll="False">
+        <ListView
+            Name="List"
+            ScrollViewer.CanContentScroll="False"
+            ScrollViewer.VerticalScrollBarVisibility="Hidden"
+            SizeChanged="ListView_SizeChanged">
             <ListView.View>
                 <GridView AllowsColumnReorder="False">
-                    <GridViewColumn Header="#" Width="0">
+                    <GridViewColumn Width="0" Header="#">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Id}"/>
+                                <TextBlock Text="{Binding Id}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -115,8 +130,14 @@
                     <GridViewColumn Header="Name">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBox Style="{DynamicResource GridViewCellTextBox}" Text="{Binding Name, Mode=OneWay}" IsReadOnly="True" Cursor="Hand" Focusable="False"
-                                         KeyDown="TextBox_KeyDown" LostFocus="TextBox_LostFocus"/>
+                                <TextBox
+                                    Cursor="Hand"
+                                    Focusable="False"
+                                    IsReadOnly="True"
+                                    KeyDown="TextBox_KeyDown"
+                                    LostFocus="TextBox_LostFocus"
+                                    Style="{DynamicResource GridViewCellTextBox}"
+                                    Text="{Binding Name, Mode=OneWay}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
@@ -124,20 +145,22 @@
                     <GridViewColumn Header="Path To File">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" Text="{Binding Path}" />
+                                <TextBlock Text="{Binding Path}" ToolTip="{Binding RelativeSource={RelativeSource Self}, Path=Text}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
 
-                    <GridViewColumn Header="🕓" Width="90">
+                    <GridViewColumn Width="90" Header="🕓">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBlock Text="{Binding Duration, Converter={StaticResource durationConverter}}"/>
+                                <TextBlock Text="{Binding Duration, Converter={StaticResource DurationConverter}}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
                 </GridView>
             </ListView.View>
         </ListView>
+
+
     </Grid>
 </UserControl>
