--- a/LinkerPlayer/Windows/SettingsWindow.xaml
+++ b/LinkerPlayer/Windows/SettingsWindow.xaml
@@ -7,10 +7,10 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:userControls="clr-namespace:LinkerPlayer.UserControls"
     Title="Settings"
-    Width="500"
+    Width="610"
     Height="600"
-    MinWidth="500"
-    MinHeight="250"
+    MinWidth="610"
+    MinHeight="475"
     AllowsTransparency="True"
     Closing="Window_Closing"
     Loaded="Window_Loaded"
@@ -86,6 +86,7 @@
                 </Style>
             </TabControl.Resources>
 
+            <!-- Audio Tab -->
             <TabItem>
                 <TabItem.Header>
                     <TextBlock Foreground="White">Audio</TextBlock>
@@ -93,6 +94,8 @@
 
                 <TabItem.Content>
                     <StackPanel Margin="30,50,30,0">
+                        
+                        <!-- Main Output Device -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="265" />
@@ -112,6 +115,7 @@
                             </ComboBox>
                         </Grid>
 
+                        <!-- Additional Output Device -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="265" />
@@ -131,6 +135,7 @@
                             </ComboBox>
                         </Grid>
 
+                        <!-- Mic Input Device -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="265" />
@@ -150,6 +155,7 @@
                             </ComboBox>
                         </Grid>
 
+                        <!-- Mic Output Device -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="265" />
@@ -169,6 +175,7 @@
                             </ComboBox>
                         </Grid>
 
+                        <!-- Enable Output to Additional Device -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -179,6 +186,7 @@
                             <ToggleButton Name="AdditionalOutputEnabled" Grid.Column="1" />
                         </Grid>
 
+                        <!-- Enable Mic Output -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -192,6 +200,7 @@
                 </TabItem.Content>
             </TabItem>
 
+            <!-- Hotkeys Tab -->
             <TabItem>
                 <TabItem.Header>
                     <TextBlock Foreground="White">Hotkeys</TextBlock>
@@ -202,6 +211,7 @@
                 </TabItem.Content>
             </TabItem>
 
+            <!-- Other Tab -->
             <TabItem>
                 <TabItem.Header>
                     <TextBlock Foreground="White">Other</TextBlock>
@@ -226,6 +236,7 @@
                             </Button>
                         </Grid>
 
+                        <!-- Enable Sound Wave Visualization -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -236,16 +247,18 @@
                             <ToggleButton Name="VisualizationEnabled" Grid.Column="1" />
                         </Grid>
 
+                        <!-- Minimize to Tray On Close -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="40" />
                             </Grid.ColumnDefinitions>
 
-                            <TextBlock Grid.Column="0">On Close, minimize to Tray</TextBlock>
+                            <TextBlock Grid.Column="0">Minimize to tray on close</TextBlock>
                             <ToggleButton Name="MinimizeToTrayEnabled" Grid.Column="1" />
                         </Grid>
 
+                        <!-- Enable equalizer on start -->
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition />
@@ -268,6 +281,7 @@
             Background="Transparent"
             Click="Save_Click"
             Content="Save" />
+
         <materialDesign:Snackbar
             Name="InfoSnackbar"
             Grid.Row="1"
