--- a/LinkerPlayer/App.xaml
+++ b/LinkerPlayer/App.xaml
@@ -1,9 +1,8 @@
 ﻿<Application
-    x:Class="Example.App"
+    x:Class="LinkerPlayer.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    StartupUri="/Windows/MainWindow.xaml">
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
