--- a/LinkerPlayer/UserControls/PlayerControls.xaml
+++ b/LinkerPlayer/UserControls/PlayerControls.xaml
@@ -5,7 +5,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:utils="clr-namespace:LinkerPlayer.Utils"
+    xmlns:core="clr-namespace:LinkerPlayer.Core"
     d:DesignHeight="80"
     d:DesignWidth="1000"
     mc:Ignorable="d">
@@ -145,7 +145,7 @@
                             <ColumnDefinition Width="9*" />
                             <ColumnDefinition Width="17*" />
                         </Grid.ColumnDefinitions>
-                        <utils:CustomSlider
+                        <core:CustomSlider
                             x:Name="SeekBar"
                             Grid.ColumnSpan="4"
                             Margin="0,4,0,0"
@@ -215,7 +215,7 @@
                     <RowDefinition Height="100*" />
                 </Grid.RowDefinitions>
 
-                <utils:CustomSlider
+                <core:CustomSlider
                     x:Name="AdditionalVolumeSlider"
                     Grid.Row="0"
                     Grid.Column="0"
@@ -239,7 +239,7 @@
                         Kind="MicrophoneVariantOff" />
                 </Button>
 
-                <utils:CustomSlider
+                <core:CustomSlider
                     x:Name="MicVolumeSlider"
                     Grid.Row="1"
                     Grid.Column="0"
@@ -263,7 +263,7 @@
                         Kind="MicrophoneOff" />
                 </Button>
 
-                <utils:CustomSlider
+                <core:CustomSlider
                     x:Name="MainVolumeSlider"
                     Grid.Row="2"
                     Grid.Column="0"
